Reran some analyses to observe results.

--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "selective-moral",
+   "id": "warming-thread",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "major-digit",
+   "id": "fossil-dream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "suffering-examination",
+   "id": "handed-business",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 3\n",
+    "dset_idx <- 1\n",
     "save_lists <- TRUE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "higher-newton",
+   "id": "naked-characterization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eligible-trust",
+   "id": "negative-bottle",
    "metadata": {},
    "source": [
     "# Functions"
@@ -86,14 +86,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accepting-newspaper",
+   "id": "willing-relaxation",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ceramic-strap",
+   "id": "furnished-couple",
    "metadata": {},
    "source": [
     "# Data"
@@ -102,13 +102,8 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "pregnant-builder",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "id": "desperate-phenomenon",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -286,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mineral-richardson",
+   "id": "ordered-interval",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -294,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "palestinian-opposition",
+   "id": "other-motorcycle",
    "metadata": {},
    "source": [
     "## DEG"
@@ -303,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "nervous-elizabeth",
+   "id": "phantom-fraud",
    "metadata": {},
    "outputs": [
     {
@@ -311,47 +306,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>8229</dd>\n",
+       "\t\t<dd>7652</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.406530975200079</dd>\n",
+       "\t\t<dd>0.378025886770082</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>4862</dd>\n",
+       "\t\t<dd>3966</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>3367</dd>\n",
+       "\t\t<dd>3686</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 8229\n",
-       "\\item[\\$deg\\_prop] 0.406530975200079\n",
-       "\\item[\\$n\\_up] 4862\n",
-       "\\item[\\$n\\_down] 3367\n",
+       "\\item[\\$n\\_deg] 7652\n",
+       "\\item[\\$deg\\_prop] 0.378025886770082\n",
+       "\\item[\\$n\\_up] 3966\n",
+       "\\item[\\$n\\_down] 3686\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   8229\n",
+       ":   7652\n",
        "$deg_prop\n",
-       ":   0.406530975200079\n",
+       ":   0.378025886770082\n",
        "$n_up\n",
-       ":   4862\n",
+       ":   3966\n",
        "$n_down\n",
-       ":   3367\n",
+       ":   3686\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 8229\n",
+       "[1] 7652\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.406531\n",
+       "[1] 0.3780259\n",
        "\n",
        "$n_up\n",
-       "[1] 4862\n",
+       "[1] 3966\n",
        "\n",
        "$n_down\n",
-       "[1] 3367\n"
+       "[1] 3686\n"
       ]
      },
      "metadata": {},
@@ -365,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "selected-separate",
+   "id": "coastal-secretary",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -374,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "convinced-yahoo",
+   "id": "fewer-pixel",
    "metadata": {},
    "outputs": [
     {
@@ -382,47 +377,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$n_deg</dt>\n",
-       "\t\t<dd>618</dd>\n",
+       "\t\t<dd>593</dd>\n",
        "\t<dt>$deg_prop</dt>\n",
-       "\t\t<dd>0.613095238095238</dd>\n",
+       "\t\t<dd>0.588293650793651</dd>\n",
        "\t<dt>$n_up</dt>\n",
-       "\t\t<dd>317</dd>\n",
+       "\t\t<dd>262</dd>\n",
        "\t<dt>$n_down</dt>\n",
-       "\t\t<dd>301</dd>\n",
+       "\t\t<dd>331</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$n\\_deg] 618\n",
-       "\\item[\\$deg\\_prop] 0.613095238095238\n",
-       "\\item[\\$n\\_up] 317\n",
-       "\\item[\\$n\\_down] 301\n",
+       "\\item[\\$n\\_deg] 593\n",
+       "\\item[\\$deg\\_prop] 0.588293650793651\n",
+       "\\item[\\$n\\_up] 262\n",
+       "\\item[\\$n\\_down] 331\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_deg\n",
-       ":   618\n",
+       ":   593\n",
        "$deg_prop\n",
-       ":   0.613095238095238\n",
+       ":   0.588293650793651\n",
        "$n_up\n",
-       ":   317\n",
+       ":   262\n",
        "$n_down\n",
-       ":   301\n",
+       ":   331\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$n_deg\n",
-       "[1] 618\n",
+       "[1] 593\n",
        "\n",
        "$deg_prop\n",
-       "[1] 0.6130952\n",
+       "[1] 0.5882937\n",
        "\n",
        "$n_up\n",
-       "[1] 317\n",
+       "[1] 262\n",
        "\n",
        "$n_down\n",
-       "[1] 301\n"
+       "[1] 331\n"
       ]
      },
      "metadata": {},
@@ -438,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "competitive-plant",
+   "id": "rapid-brain",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -446,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "modular-oasis",
+   "id": "complicated-testing",
    "metadata": {},
    "source": [
     "## FIGO"
@@ -454,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "clean-november",
+   "id": "satisfied-appointment",
    "metadata": {},
    "source": [
     "### LASSO multinomial regression"
@@ -463,23 +458,23 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "trying-paris",
+   "id": "medieval-fifteen",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_var</strong> = 20"
+       "<strong>$n_var</strong> = 220"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_var} = 20"
+       "\\textbf{\\$n\\_var} = 220"
       ],
       "text/markdown": [
-       "**$n_var** = 20"
+       "**$n_var** = 220"
       ],
       "text/plain": [
        "$n_var\n",
-       "[1] 20\n"
+       "[1] 220\n"
       ]
      },
      "metadata": {},
@@ -493,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bridal-earth",
+   "id": "indonesian-purse",
    "metadata": {},
    "source": [
     "### Welch ANOVA"
@@ -502,23 +497,23 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "heard-secondary",
+   "id": "understanding-profit",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_sig</strong> = 17"
+       "<strong>$n_sig</strong> = 3"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_sig} = 17"
+       "\\textbf{\\$n\\_sig} = 3"
       ],
       "text/markdown": [
-       "**$n_sig** = 17"
+       "**$n_sig** = 3"
       ],
       "text/plain": [
        "$n_sig\n",
-       "[1] 17\n"
+       "[1] 3\n"
       ]
      },
      "metadata": {},
@@ -532,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "choice-prisoner",
+   "id": "covered-travel",
    "metadata": {},
    "source": [
     "### Point-biserial correlation with FIGO"
@@ -541,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "beautiful-banner",
+   "id": "configured-rescue",
    "metadata": {},
    "outputs": [
     {
@@ -575,27 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "dimensional-windsor",
+   "id": "comparative-nature",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "6"
-      ],
-      "text/latex": [
-       "6"
-      ],
-      "text/markdown": [
-       "6"
-      ],
-      "text/plain": [
-       "[1] 6"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -609,6 +586,24 @@
       ],
       "text/plain": [
        "[1] 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "2"
+      ],
+      "text/latex": [
+       "2"
+      ],
+      "text/markdown": [
+       "2"
+      ],
+      "text/plain": [
+       "[1] 2"
       ]
      },
      "metadata": {},
@@ -641,7 +636,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proved-scoop",
+   "id": "magnetic-circumstances",
    "metadata": {},
    "source": [
     "## Survival"
@@ -649,7 +644,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "double-huntington",
+   "id": "hollywood-bishop",
    "metadata": {},
    "source": [
     "### LASSO Cox PH"
@@ -658,23 +653,23 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "combined-institute",
+   "id": "difficult-worship",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_var</strong> = 48"
+       "<strong>$n_var</strong> = 43"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_var} = 48"
+       "\\textbf{\\$n\\_var} = 43"
       ],
       "text/markdown": [
-       "**$n_var** = 48"
+       "**$n_var** = 43"
       ],
       "text/plain": [
        "$n_var\n",
-       "[1] 48\n"
+       "[1] 43\n"
       ]
      },
      "metadata": {},
@@ -688,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "severe-glossary",
+   "id": "alive-reproduction",
    "metadata": {},
    "source": [
     "### Univariate KM/Cox PH"
@@ -696,24 +691,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "eligible-benjamin",
+   "execution_count": 23,
+   "id": "binding-batch",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_sig</strong> = 3"
+       "<strong>$n_sig</strong> = 37"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_sig} = 3"
+       "\\textbf{\\$n\\_sig} = 37"
       ],
       "text/markdown": [
-       "**$n_sig** = 3"
+       "**$n_sig** = 37"
       ],
       "text/plain": [
        "$n_sig\n",
-       "[1] 3\n"
+       "[1] 37\n"
       ]
      },
      "metadata": {},
@@ -729,7 +724,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dimensional-ambassador",
+   "id": "outside-server",
    "metadata": {},
    "source": [
     "### Censored time screen"
@@ -737,24 +732,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "representative-spread",
+   "execution_count": 27,
+   "id": "coordinate-cocktail",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<strong>$n_sig</strong> = 2"
+       "<strong>$n_sig</strong> = 42"
       ],
       "text/latex": [
-       "\\textbf{\\$n\\_sig} = 2"
+       "\\textbf{\\$n\\_sig} = 42"
       ],
       "text/markdown": [
-       "**$n_sig** = 2"
+       "**$n_sig** = 42"
       ],
       "text/plain": [
        "$n_sig\n",
-       "[1] 2\n"
+       "[1] 42\n"
       ]
      },
      "metadata": {},
@@ -770,23 +765,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "narrow-lender",
+   "execution_count": 29,
+   "id": "tough-admission",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "2"
+       "0.772727272727273"
       ],
       "text/latex": [
-       "2"
+       "0.772727272727273"
       ],
       "text/markdown": [
-       "2"
+       "0.772727272727273"
       ],
       "text/plain": [
-       "[1] 2"
+       "[1] 0.7727273"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "univ_cph_list <- univ_survival_df %>%\n",
+    "    dplyr::filter(cph_qval < q_univ_surv_thresh) %>%\n",
+    "    dplyr::pull(geneID)\n",
+    "\n",
+    "length(intersect(cts_meta_ls$genes, univ_cph_list)) / length(union(cts_meta_ls$genes, univ_cph_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bridal-logistics",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "19"
+      ],
+      "text/latex": [
+       "19"
+      ],
+      "text/markdown": [
+       "19"
+      ],
+      "text/plain": [
+       "[1] 19"
       ]
      },
      "metadata": {},
@@ -795,16 +823,16 @@
     {
      "data": {
       "text/html": [
-       "2"
+       "17"
       ],
       "text/latex": [
-       "2"
+       "17"
       ],
       "text/markdown": [
-       "2"
+       "17"
       ],
       "text/plain": [
-       "[1] 2"
+       "[1] 17"
       ]
      },
      "metadata": {},
@@ -813,16 +841,16 @@
     {
      "data": {
       "text/html": [
-       "1"
+       "35"
       ],
       "text/latex": [
-       "1"
+       "35"
       ],
       "text/markdown": [
-       "1"
+       "35"
       ],
       "text/plain": [
-       "[1] 1"
+       "[1] 35"
       ]
      },
      "metadata": {},
@@ -837,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "turkish-detail",
+   "id": "responsible-strength",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -846,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "joined-swift",
+   "id": "listed-folks",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "radical-season",
+   "id": "lesbian-transaction",
    "metadata": {},
    "outputs": [
     {
@@ -877,20 +905,20 @@
        "\t<dt>$n_sig_modules</dt>\n",
        "\t\t<dd>3</dd>\n",
        "\t<dt>$n_sig_genes</dt>\n",
-       "\t\t<dd>71</dd>\n",
+       "\t\t<dd>232</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
        "\\item[\\$n\\_sig\\_modules] 3\n",
-       "\\item[\\$n\\_sig\\_genes] 71\n",
+       "\\item[\\$n\\_sig\\_genes] 232\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$n_sig_modules\n",
        ":   3\n",
        "$n_sig_genes\n",
-       ":   71\n",
+       ":   232\n",
        "\n",
        "\n"
       ],
@@ -899,7 +927,7 @@
        "[1] 3\n",
        "\n",
        "$n_sig_genes\n",
-       "[1] 71\n"
+       "[1] 232\n"
       ]
      },
      "metadata": {},
@@ -913,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "printable-voluntary",
+   "id": "capital-playlist",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -922,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "naval-raising",
+   "id": "religious-norwegian",
    "metadata": {},
    "outputs": [
     {
@@ -933,29 +961,29 @@
        ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
        ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
        ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
-       "</style><dl class=dl-inline><dt>0%</dt><dd>1.3</dd><dt>25%</dt><dd>2.7</dd><dt>50%</dt><dd>3.6</dd><dt>75%</dt><dd>5.5</dd><dt>100%</dt><dd>27.5</dd></dl>\n"
+       "</style><dl class=dl-inline><dt>0%</dt><dd>2.6</dd><dt>25%</dt><dd>9.3</dd><dt>50%</dt><dd>13.8</dd><dt>75%</dt><dd>21.5</dd><dt>100%</dt><dd>73.4</dd></dl>\n"
       ],
       "text/latex": [
        "\\begin{description*}\n",
-       "\\item[0\\textbackslash{}\\%] 1.3\n",
-       "\\item[25\\textbackslash{}\\%] 2.7\n",
-       "\\item[50\\textbackslash{}\\%] 3.6\n",
-       "\\item[75\\textbackslash{}\\%] 5.5\n",
-       "\\item[100\\textbackslash{}\\%] 27.5\n",
+       "\\item[0\\textbackslash{}\\%] 2.6\n",
+       "\\item[25\\textbackslash{}\\%] 9.3\n",
+       "\\item[50\\textbackslash{}\\%] 13.8\n",
+       "\\item[75\\textbackslash{}\\%] 21.5\n",
+       "\\item[100\\textbackslash{}\\%] 73.4\n",
        "\\end{description*}\n"
       ],
       "text/markdown": [
        "0%\n",
-       ":   1.325%\n",
-       ":   2.750%\n",
-       ":   3.675%\n",
-       ":   5.5100%\n",
-       ":   27.5\n",
+       ":   2.625%\n",
+       ":   9.350%\n",
+       ":   13.875%\n",
+       ":   21.5100%\n",
+       ":   73.4\n",
        "\n"
       ],
       "text/plain": [
        "  0%  25%  50%  75% 100% \n",
-       " 1.3  2.7  3.6  5.5 27.5 "
+       " 2.6  9.3 13.8 21.5 73.4 "
       ]
      },
      "metadata": {},
@@ -972,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominican-antenna",
+   "id": "interesting-pursuit",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -981,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "skilled-thing",
+   "id": "italic-funeral",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,22 +1043,22 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "inappropriate-kingston",
+   "id": "manufactured-antibody",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "8229"
+       "7652"
       ],
       "text/latex": [
-       "8229"
+       "7652"
       ],
       "text/markdown": [
-       "8229"
+       "7652"
       ],
       "text/plain": [
-       "[1] 8229"
+       "[1] 7652"
       ]
      },
      "metadata": {},
@@ -1039,16 +1067,16 @@
     {
      "data": {
       "text/html": [
-       "618"
+       "593"
       ],
       "text/latex": [
-       "618"
+       "593"
       ],
       "text/markdown": [
-       "618"
+       "593"
       ],
       "text/plain": [
-       "[1] 618"
+       "[1] 593"
       ]
      },
      "metadata": {},
@@ -1057,16 +1085,16 @@
     {
      "data": {
       "text/html": [
-       "65"
+       "216"
       ],
       "text/latex": [
-       "65"
+       "216"
       ],
       "text/markdown": [
-       "65"
+       "216"
       ],
       "text/plain": [
-       "[1] 65"
+       "[1] 216"
       ]
      },
      "metadata": {},
@@ -1075,16 +1103,16 @@
     {
      "data": {
       "text/html": [
-       "26"
+       "33"
       ],
       "text/latex": [
-       "26"
+       "33"
       ],
       "text/markdown": [
-       "26"
+       "33"
       ],
       "text/plain": [
-       "[1] 26"
+       "[1] 33"
       ]
      },
      "metadata": {},
@@ -1093,16 +1121,16 @@
     {
      "data": {
       "text/html": [
-       "2"
+       "12"
       ],
       "text/latex": [
-       "2"
+       "12"
       ],
       "text/markdown": [
-       "2"
+       "12"
       ],
       "text/plain": [
-       "[1] 2"
+       "[1] 12"
       ]
      },
      "metadata": {},
@@ -1129,7 +1157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "classified-constitution",
+   "id": "worse-scenario",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1138,7 +1166,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "whole-engineering",
+   "id": "consolidated-theta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "editorial-addiction",
+   "id": "wrapped-cooler",
    "metadata": {},
    "outputs": [],
    "source": []
