--- a/one_off/dataset_sizes.ipynb
+++ b/one_off/dataset_sizes.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cathedral-underground",
+   "id": "funded-presentation",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "obvious-zealand",
+   "id": "antique-surge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,15 +45,15 @@
     "matrisome_path <- paste0(dirs$data_dir, \"/matrisome/matrisome_hs_masterlist.tsv\")\n",
     "\n",
     "event_code <- list(\"Alive\" = 0, \"Dead\" = 1)\n",
-    "covariate_cols_no_figo <- c(\"age_at_diagnosis\", \"race\", \"ethnicity\")\n",
-    "covariate_cols <- c(\"figo_stage\", covariate_cols_no_figo)\n",
+    "# covariate_cols_no_figo <- c(\"age_at_diagnosis\", \"race\", \"ethnicity\")\n",
+    "# covariate_cols <- c(\"figo_stage\", covariate_cols_no_figo)\n",
     "dep_cols <- c(\"vital_status\", \"survival_time\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "discrete-coffee",
+   "id": "falling-footage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "metric-tomato",
+   "id": "amazing-decade",
    "metadata": {},
    "source": [
     "# Overall"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "protected-clerk",
+   "id": "stock-crash",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  Hugo_Symbol = \u001b[31mcol_character()\u001b[39m\n",
@@ -88,7 +88,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "friendly-banking",
+   "id": "whole-crowd",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "authentic-terrorism",
+   "id": "representative-firewall",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-paraguay",
+   "id": "competent-hazard",
    "metadata": {},
    "source": [
     "# Tumor & normal"
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "controlled-jacksonville",
+   "id": "concerned-honor",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
       "  condition = \u001b[31mcol_character()\u001b[39m,\n",
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "double-merit",
+   "id": "controversial-substitute",
    "metadata": {},
    "outputs": [
     {
@@ -246,15 +246,34 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "246"
+      ],
+      "text/latex": [
+       "246"
+      ],
+      "text/markdown": [
+       "246"
+      ],
+      "text/plain": [
+       "[1] 246"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "coldata_df %>% group_by(condition) %>% count()"
+    "coldata_df %>% group_by(condition) %>% count()\n",
+    "nrow(coldata_df)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "medieval-webster",
+   "id": "built-wesley",
    "metadata": {},
    "source": [
     "# Survival"
@@ -263,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "surprising-chicago",
+   "id": "blank-smoke",
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +290,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_status = \u001b[31mcol_character()\u001b[39m,\n",
@@ -290,7 +309,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -299,7 +318,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -340,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "formal-multiple",
+   "id": "subsequent-hungary",
    "metadata": {},
    "outputs": [
     {
