--- a/feature_selection_analysis/multinomial_en.ipynb
+++ b/feature_selection_analysis/multinomial_en.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "informal-exclusion",
+   "id": "amended-director",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -65,10 +65,6 @@
     "library(tidyverse)\n",
     "library(WGCNA)\n",
     "library(glmnet)\n",
-    "# library(BiocParallel)\n",
-    "# library(parallel)\n",
-    "# library(caret)\n",
-    "\n",
     "\n",
     "# Custom package\n",
     "library(rutils)"
@@ -77,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "compressed-stone",
+   "id": "advanced-senegal",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "joined-bolivia",
+   "id": "numeric-truth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,12 +111,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "painful-soundtrack",
+   "id": "declared-proceeding",
    "metadata": {},
    "outputs": [],
    "source": [
     "dset_idx <- 3\n",
-    "save_res <- FALSE\n",
+    "save_res <- TRUE\n",
     "# Worst performance observed in CESC\n",
     "worst_score <- 0.6864"
    ]
@@ -128,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "disciplinary-organ",
+   "id": "valid-consensus",
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +132,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  sample_name = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_status = \u001b[31mcol_character()\u001b[39m,\n",
@@ -166,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "complex-hughes",
+   "id": "senior-musician",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +170,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -206,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "spare-result",
+   "id": "artificial-cooling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "immune-limit",
+   "id": "conditional-basin",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "indie-emerald",
+   "id": "consistent-sucking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "relevant-telescope",
+   "id": "surface-samuel",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "included-promise",
+   "id": "forbidden-collar",
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "applied-fisher",
+   "id": "purple-auction",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "handed-linux",
+   "id": "sonic-plaintiff",
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "radio-choir",
+   "id": "protected-genetics",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "incorrect-denmark",
+   "id": "prepared-accessory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "going-capture",
+   "id": "compliant-american",
    "metadata": {},
    "source": [
     "## Weighted baseline"
@@ -555,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "egyptian-integrity",
+   "id": "intelligent-villa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "specialized-torture",
+   "id": "endless-fortune",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ancient-attribute",
+   "id": "faced-impossible",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "disabled-father",
+   "id": "northern-gothic",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "strong-hypothesis",
+   "id": "developed-jacket",
    "metadata": {},
    "outputs": [
     {
@@ -670,12 +666,46 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "inside-implementation",
+   "id": "utility-darkness",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_length <- length(cv_mr_model$lambda)\n",
+    "# param_length\n",
+    "kept_idx <- rep(FALSE, param_length)\n",
+    "kept_idx[lambda_idx] = TRUE\n",
+    "best_idx <- rep(FALSE, param_length)\n",
+    "best_idx[[cv_mr_model$index[\"min\",]]] = TRUE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "alpine-links",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fit_details_df <- tibble(\n",
+    "    cvm = cv_mr_model$cvm,\n",
+    "    lambda = cv_mr_model$lambda,\n",
+    "    cvlow = cv_mr_model$cvlo,\n",
+    "    cvup = cv_mr_model$cvup,\n",
+    "    nonzero = cv_mr_model$nzero,\n",
+    "    kept_idx = kept_idx,\n",
+    "    best_idx = best_idx,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "corporate-advance",
    "metadata": {},
    "outputs": [],
    "source": [
     "if (save_res) {\n",
     "    write_tsv(important_gene_df, paste0(dirs$analysis_dir, \"/feature_selection/\", unified_dsets[dset_idx], \"_en_multinom_results.tsv\"))\n",
+    "    write_tsv(fit_details_df, paste0(dirs$analysis_dir, \"/model_opt/\", unified_dsets[dset_idx], \"_en_mr_fit_data.tsv\"))\n",
     "}"
    ]
   }
