--- a/one_off/r_env.ipynb
+++ b/one_off/r_env.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "exciting-notice",
+   "id": "geological-barrier",
    "metadata": {},
    "outputs": [
     {
@@ -33,27 +33,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "frank-render",
+   "execution_count": 4,
+   "id": "naked-smile",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ip <- as.data.frame(installed.packages()[,c(1,3:4)])\n",
-    "# rownames(ip) <- NULL\n",
-    "# ip <- ip[is.na(ip$Priority),1:2,drop=FALSE]\n",
-    "# print(ip, row.names=FALSE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "civil-playlist",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -341,15 +323,14 @@
     "    as_tibble() %>%\n",
     "    rename_with(~ tolower(.)) %>%\n",
     "    filter(!(priority %in% c(\"base\"))) %>%\n",
-    "    select(package, version) %>%\n",
-    "    write_csv()\n",
+    "    select(package, version)\n",
     "package_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "present-bernard",
+   "id": "weighted-torture",
    "metadata": {},
    "outputs": [],
    "source": []
