verify_dirs.py script has added checks.

--- a/one_off/r_env.ipynb
+++ b/one_off/r_env.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "geological-barrier",
+   "id": "virtual-letter",
    "metadata": {},
    "outputs": [
     {
@@ -34,8 +34,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "naked-smile",
-   "metadata": {},
+   "id": "tribal-credit",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -330,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "weighted-torture",
+   "id": "dense-subsection",
    "metadata": {},
    "outputs": [],
    "source": []
