--- a/figures/wgcna_vis_v2.ipynb
+++ b/figures/wgcna_vis_v2.ipynb
@@ -3,8 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "referenced-arcade",
-   "metadata": {},
+   "id": "premium-thomson",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -84,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "contrary-gilbert",
+   "id": "suburban-offer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "seventh-reception",
+   "id": "dressed-ottawa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "checked-foundation",
+   "id": "controlled-nutrition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "arbitrary-reception",
+   "id": "turned-chorus",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "private-allergy",
+   "id": "subjective-jones",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "limiting-orbit",
+   "id": "purple-officer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "talented-aruba",
+   "id": "contemporary-pride",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "revised-gilbert",
+   "id": "sufficient-costs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "biological-hawaii",
+   "id": "treated-toddler",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "steady-russell",
+   "id": "recognized-witch",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "international-superior",
+   "id": "appointed-venture",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "southeast-medium",
+   "id": "continuous-louisiana",
    "metadata": {},
    "outputs": [],
    "source": []
