Rough draft of figure 2.

--- a/figures/figure_1.ipynb
+++ b/figures/figure_1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "capable-pharmaceutical",
+   "id": "jewish-honey",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "detected-physiology",
+   "id": "public-celebrity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "capital-occurrence",
+   "id": "magnetic-ocean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "simplified-oregon",
+   "id": "motivated-trial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +82,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "natural-teaching",
-   "metadata": {},
+   "id": "angry-award",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -184,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "reliable-columbus",
+   "id": "valued-madness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "rocky-beast",
+   "id": "cheap-suffering",
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "modular-joint",
+   "id": "terminal-thesis",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "exotic-deficit",
+   "id": "constitutional-climb",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "scenic-rainbow",
+   "id": "exempt-nicaragua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleased-shade",
+   "id": "later-attendance",
    "metadata": {},
    "outputs": [],
    "source": []
