--- a/figures/unified_DGE_vis_v2.ipynb
+++ b/figures/unified_DGE_vis_v2.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "humanitarian-network",
+   "id": "radio-scratch",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bound-copying",
+   "id": "worth-understanding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "genuine-royal",
+   "id": "wooden-surprise",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "divine-bread",
+   "id": "registered-plant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "relevant-guarantee",
+   "id": "breeding-estonia",
    "metadata": {},
    "source": [
     "# Functions"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "relative-syndrome",
+   "id": "relative-provision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boolean-contents",
+   "id": "national-spell",
    "metadata": {},
    "source": [
     "# Load data"
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "adverse-friend",
+   "id": "certified-chicago",
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -176,7 +176,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  Hugo_Symbol = \u001b[31mcol_character()\u001b[39m\n",
@@ -185,7 +185,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "technical-convenience",
+   "id": "cooked-bikini",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "three-solution",
+   "id": "increasing-trust",
    "metadata": {},
    "source": [
     "# Volcano plots"
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "front-regard",
+   "id": "analyzed-processor",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "based-individual",
+   "id": "bacterial-tenant",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "surprised-framework",
+   "id": "beginning-commonwealth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "comfortable-entry",
+   "id": "seventh-saturday",
    "metadata": {},
    "source": [
     "# Stacked barplots"
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "inner-symphony",
+   "id": "individual-blink",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "national-colors",
+   "id": "rotary-prospect",
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "fatty-confusion",
+   "id": "structural-division",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "iraqi-convergence",
+   "id": "bound-mayor",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "computational-ranking",
+   "id": "above-soldier",
    "metadata": {},
    "outputs": [
     {
@@ -570,17 +570,18 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "rapid-tissue",
+   "id": "continuous-abuse",
    "metadata": {},
    "outputs": [],
    "source": [
-    "category_bplot <- last_plot()"
+    "category_bplot <- last_plot()\n",
+    "ggsave(paste0(dirs$figures_dir, \"/deg/\", dsets[dset_idx], \"_matrisome_genes_cat_bplot.png\"), category_bplot, height = 4, width = 5, dpi = dpi)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "severe-blame",
+   "id": "premium-white",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -594,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "empirical-wales",
+   "id": "alike-wallet",
    "metadata": {},
    "outputs": [],
    "source": []
