Did some vis for grant proposal.

--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "reasonable-logistics",
+   "id": "accepting-player",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "outer-freeze",
+   "id": "controversial-walter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,18 +47,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "floral-latest",
+   "id": "secret-garbage",
    "metadata": {},
    "outputs": [],
    "source": [
     "dset_idx <- 3\n",
-    "save_lists <- TRUE"
+    "save_lists <- FALSE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "rising-edward",
+   "id": "military-hamilton",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "restricted-stack",
+   "id": "cross-jewel",
    "metadata": {},
    "source": [
     "# Functions"
@@ -86,14 +86,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fleet-drill",
+   "id": "acquired-browse",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "ordered-expression",
+   "id": "intelligent-championship",
    "metadata": {},
    "source": [
     "# Data"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "quality-treasure",
+   "id": "upset-china",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -127,7 +127,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -136,7 +136,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -150,7 +150,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  coeff = \u001b[32mcol_double()\u001b[39m\n",
@@ -158,7 +158,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  vital_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -168,7 +168,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  km_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -180,7 +180,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_coefs = \u001b[32mcol_double()\u001b[39m,\n",
@@ -191,7 +191,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -210,7 +210,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  pval = \u001b[32mcol_double()\u001b[39m,\n",
@@ -220,7 +220,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
@@ -230,7 +230,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  module = \u001b[31mcol_character()\u001b[39m,\n",
       "  figo_stage_1_cor = \u001b[32mcol_double()\u001b[39m,\n",
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "undefined-banks",
+   "id": "gorgeous-elder",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ongoing-works",
+   "id": "muslim-illinois",
    "metadata": {},
    "source": [
     "## DEG"
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "applicable-combine",
+   "id": "alive-motivation",
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thorough-relief",
+   "id": "dressed-entrance",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "systematic-seeker",
+   "id": "unavailable-frank",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wired-ceremony",
+   "id": "broken-council",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unexpected-illness",
+   "id": "satisfied-visibility",
    "metadata": {},
    "source": [
     "## FIGO"
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deluxe-gibson",
+   "id": "duplicate-gravity",
    "metadata": {},
    "source": [
     "### LASSO multinomial regression"
@@ -458,7 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "stylish-championship",
+   "id": "useful-leave",
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "determined-comment",
+   "id": "modern-rugby",
    "metadata": {},
    "source": [
     "### Welch ANOVA"
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "active-aerospace",
+   "id": "european-preservation",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amber-elder",
+   "id": "stable-locator",
    "metadata": {},
    "source": [
     "### Point-biserial correlation with FIGO"
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "valued-philosophy",
+   "id": "available-explorer",
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "streaming-potato",
+   "id": "authentic-closure",
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-twenty",
+   "id": "lovely-format",
    "metadata": {},
    "source": [
     "## Survival"
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stretch-attraction",
+   "id": "flush-award",
    "metadata": {},
    "source": [
     "### LASSO Cox PH"
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "noticed-taiwan",
+   "id": "cellular-porcelain",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mighty-traffic",
+   "id": "global-treatment",
    "metadata": {},
    "source": [
     "### Univariate KM/Cox PH"
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "clinical-mauritius",
+   "id": "coral-whale",
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "answering-institution",
+   "id": "competent-butter",
    "metadata": {},
    "source": [
     "### Censored time screen"
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "personal-decade",
+   "id": "solved-bhutan",
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "hundred-library",
+   "id": "empty-bulgarian",
    "metadata": {},
    "outputs": [
     {
@@ -806,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ongoing-draft",
+   "id": "controlled-vitamin",
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confused-scientist",
+   "id": "hired-january",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "fallen-breeding",
+   "id": "passive-favor",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "capital-integrity",
+   "id": "cardiac-frost",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -937,7 +937,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "cardiac-stable",
+   "id": "young-furniture",
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "stable-stake",
+   "id": "nuclear-fluid",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -996,7 +996,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "executive-directory",
+   "id": "fantastic-motor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1030,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "absent-salmon",
+   "id": "electoral-watch",
    "metadata": {},
    "outputs": [
     {
@@ -1181,8 +1181,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "overall-conversion",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "100"
+      ],
+      "text/latex": [
+       "100"
+      ],
+      "text/markdown": [
+       "100"
+      ],
+      "text/plain": [
+       "[1] 100"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "union(figo_umsmg_list, figo_nsmg_list) %>% length()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "normal-saver",
+   "id": "above-maldives",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1191,7 +1220,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "raising-necklace",
+   "id": "computational-champagne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "consistent-canal",
+   "id": "certain-worthy",
    "metadata": {},
    "outputs": [],
    "source": []
